--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
         	<artifactId>jtwig-core</artifactId>
        		<version>5.65</version>
     	</dependency>
+		<!-- https://mvnrepository.com/artifact/com.intellij/forms_rt -->
+		<dependency>
+			<groupId>com.intellij</groupId>
+			<artifactId>forms_rt</artifactId>
+			<version>7.0.3</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -46,20 +53,27 @@
 	</properties>
 	<build>
 
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>planner.App</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
+		<plugins> <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-shade-plugin</artifactId>
+			<version>3.4.1</version>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<transformers>
+					<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+						<mainClass>planner.App</mainClass>
+					</transformer>
+				</transformers>
+			</configuration>
+		</plugin>
 		</plugins>
 	</build>
 
