--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.0</version>
+			<version>3.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -37,7 +37,7 @@
 		<dependency>
     	    <groupId>org.jtwig</groupId>
         	<artifactId>jtwig-core</artifactId>
-       		<version>5.65</version>
+       		<version>5.87.0.RELEASE</version>
     	</dependency>
 		<!-- https://mvnrepository.com/artifact/com.intellij/forms_rt -->
 		<dependency>
